Change title from 'Homework Generator' to 'Holiday Homework Generator'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Homework Generator</title>
+    <title>Holiday Homework Generator</title>
     <style>
         :root { --wa-green: #25D366; --wa-dark: #075E54; }
         
