--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="header">
             
             <img src="https://i.ibb.co/k61Tv6t5/images.png" alt="Logo" onerror="this.style.display='none'">
-            <h2 style="margin:0">Holyday Homework Generator</h2>
+            <h2 style="margin:0">Holiday Homework Generator</h2>
             <p style="margin: 5px 0 0 0; opacity: 0.8; font-size: 14px;">Create clear assignment images</p>
         </div>
         <div class="content">
